add marketplace analysis
